<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.neverim.ubergarage.ExpandableHeightGrid
                android:id="@+id/edit_cardView"
                android:scaleType="fitCenter"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:isScrollContainer="false"
                android:layout_marginTop="25dp"
                android:numColumns="3"
                android:stretchMode="columnWidth"
                android:background="@drawable/round_outline"/>

            <com.google.android.gms.maps.MapView
                android:id="@+id/edit_mapView"
                android:layout_below="@id/edit_cardView"
                android:layout_alignStart="@id/edit_cardView"
                android:layout_alignEnd="@id/edit_cardView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_outline"
                android:outlineProvider="background"
                map:mapType="hybrid"
                map:uiZoomGestures="true"
                map:uiRotateGestures="true"/>

            <TextView
                android:id="@+id/edit_card_price"
                android:layout_alignBaseline="@id/edit_card_price_value"
                android:layout_alignStart="@id/edit_mapView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorAccent"
                android:text="@string/price"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edit_card_price_value"
                android:layout_marginStart="85dp"
                android:layout_below="@id/edit_mapView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:hint="@string/priceValue"
                android:inputType="numberDecimal"
                android:background="@null"/>

            <TextView
                android:id="@+id/edit_card_location"
                android:layout_alignStart="@id/edit_mapView"
                android:layout_below="@id/edit_card_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorAccent"
                android:text="@string/location"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edit_card_location_value"
                android:layout_marginStart="85dp"
                android:layout_below="@id/edit_card_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:hint="@string/locationHint"
                android:inputType="textPostalAddress"
                android:maxLength="14"
                android:background="@null"/>

            <CheckBox
                android:id="@+id/edit_card_feature_tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_card_location"
                android:layout_alignStart="@id/edit_card_location"
                android:text="@string/tools"
                android:layout_marginTop="8sp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/colorAccent"
                android:buttonTint="@color/colorPrimary">
            </CheckBox>

            <CheckBox
                android:id="@+id/edit_card_feature_lift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/edit_card_feature_tools"
                android:layout_alignBottom="@id/edit_card_feature_tools"
                android:layout_alignStart="@id/edit_card_location_value"
                android:layout_marginStart="15dp"
                android:text="@string/lift"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/colorAccent"
                android:buttonTint="@color/colorPrimary">
            </CheckBox>

            <CheckBox
                android:id="@+id/edit_card_feature_ph1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_card_feature_tools"
                android:layout_alignStart="@id/edit_card_feature_tools"
                android:text="@string/ditch"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/colorAccent"
                android:buttonTint="@color/colorPrimary">
            </CheckBox>

            <CheckBox
                android:id="@+id/edit_card_feature_ph2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/edit_card_feature_ph1"
                android:layout_alignBottom="@id/edit_card_feature_ph1"
                android:layout_alignStart="@id/edit_card_price_value"
                android:layout_marginStart="15dp"
                android:text="@string/climate"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/colorAccent"
                android:buttonTint="@color/colorPrimary">
            </CheckBox>

            <CheckBox
                android:id="@+id/edit_card_feature_ph3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_card_feature_ph2"
                android:layout_alignStart="@id/edit_card_feature_tools"
                android:text="@string/security"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/colorAccent"
                android:buttonTint="@color/colorPrimary">
            </CheckBox>

            <CheckBox
                android:id="@+id/edit_card_feature_ph4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/edit_card_feature_ph3"
                android:layout_alignBottom="@id/edit_card_feature_ph3"
                android:layout_alignStart="@id/edit_card_price_value"
                android:layout_marginStart="15dp"
                android:text="@string/tireMount"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/colorAccent"
                android:buttonTint="@color/colorPrimary">
            </CheckBox>

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_card_feature_ph3"
                android:layout_alignStart="@id/edit_cardView"
                android:layout_alignEnd="@id/edit_cardView"
                android:layout_marginTop="8sp"
                android:padding="8dp"
                android:gravity="start|top"
                android:textColor="@color/colorAccent"
                android:inputType="textAutoComplete|textMultiLine"
                android:hint="@string/description"
                android:background="@drawable/button_rect"/>

            <Button
                android:id="@+id/edit_button_add"
                android:layout_below="@id/edit_description"
                android:layout_centerHorizontal="true"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:background="@drawable/button_rect"
                android:text="@string/edit"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"/>
            </RelativeLayout>
    </ScrollView>
</RelativeLayout>