<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_background"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/image_overlay"
        android:src="@drawable/door1"/>

    <EditText
        android:id="@+id/text_login_username"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:alpha="0.7"
        android:textAlignment="center"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_rect"/>

    <EditText
        android:id="@+id/text_login_password"
        android:layout_below="@id/text_login_username"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:alpha="0.7"
        android:textAlignment="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_rect"/>

    <Button
        android:id="@+id/button_login"
        android:layout_below="@id/text_login_password"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@drawable/button_rect"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="125dp"/>

</RelativeLayout>