<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    card_view:contentPadding="2dp"
    card_view:cardCornerRadius="20dp"
    android:layout_margin="8dp">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_gradient_outline">

        <ProgressBar
            android:id="@+id/profile_loading"
            android:indeterminate="true"
            android:layout_margin="4dp"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"/>

        <ImageView
            android:id="@+id/profile_image"
            android:layout_margin="4dp"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@drawable/round_outline"
            android:outlineProvider="background"/>

        <TextView
            android:id="@+id/profile_name"
            android:layout_toEndOf="@id/profile_image"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:text=""
            android:maxLength="15"/>

        <ImageButton
            android:id="@+id/profile_edit_btn"
            android:layout_alignEnd="@id/profile_image"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="2dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_edit"/>

        <ImageButton
            android:id="@+id/profile_delete_btn"
            android:layout_toStartOf="@id/profile_edit_btn"
            android:layout_alignBaseline="@id/profile_edit_btn"
            android:layout_marginTop="2dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_delete"/>

        <TextView
            android:id="@+id/profile_location"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@id/profile_image"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorAccent"
            android:text="@string/location"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/profile_location_value"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/profile_location"
            android:layout_alignBaseline="@id/profile_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:text="@string/placeHolder"/>

        <TextView
            android:id="@+id/profile_price"
            android:layout_below="@id/profile_location"
            android:layout_alignStart="@id/profile_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorAccent"
            android:text="@string/price"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/profile_price_value"
            android:layout_alignStart="@id/profile_location_value"
            android:layout_alignBaseline="@id/profile_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:text="@string/placeHolder"/>

        <CheckBox
            android:id="@+id/profile_feature_tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_price"
            android:layout_alignStart="@id/profile_location"
            android:text="@string/tools"
            android:layout_marginTop="8sp"
            android:clickable="false"
            android:checked="true"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent">
        </CheckBox>

        <CheckBox
            android:id="@+id/profile_feature_lift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/profile_feature_tools"
            android:layout_alignBottom="@id/profile_feature_tools"
            android:layout_alignStart="@id/profile_price_value"
            android:layout_marginStart="15dp"
            android:text="@string/lift"
            android:clickable="false"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent">
        </CheckBox>

        <CheckBox
            android:id="@+id/profile_feature_ph1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_feature_tools"
            android:layout_alignStart="@id/profile_name"
            android:text="@string/ditch"
            android:clickable="false"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent">
        </CheckBox>

        <CheckBox
            android:id="@+id/profile_feature_ph2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/profile_feature_ph1"
            android:layout_alignBottom="@id/profile_feature_ph1"
            android:layout_alignStart="@id/profile_price_value"
            android:layout_marginStart="15dp"
            android:text="@string/climate"
            android:clickable="false"
            android:checked="true"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent">
        </CheckBox>

        <CheckBox
            android:id="@+id/profile_feature_ph3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_feature_ph2"
            android:layout_alignStart="@id/profile_feature_ph1"
            android:text="@string/security"
            android:clickable="false"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent">
        </CheckBox>

        <CheckBox
            android:id="@+id/profile_feature_ph4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/profile_feature_ph3"
            android:layout_alignBottom="@id/profile_feature_ph3"
            android:layout_alignStart="@id/profile_price_value"
            android:layout_marginStart="15dp"
            android:text="@string/tireMount"
            android:clickable="false"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent">
        </CheckBox>

    </RelativeLayout>

</androidx.cardview.widget.CardView>